--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,18 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+main {
+  background-image: url('/background.jpg');
+  background-size: cover; 
 }
 
 body {
@@ -24,4 +15,5 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-family: Ubuntu, Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
