Remove moment js

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@ body {
 
 @layer components {
   .window-container {
-    @apply  w-[700px] h-[500px] text-white rounded-t-lg border border-black shadow-xl
+    @apply  relative w-[700px] h-[500px] text-white rounded-t-lg border border-black shadow-xl
   }
   .home-title {
     @apply flex justify-between m-4 px-3 py-2 rounded-md border border-ubuntu-9 bg-ubuntu-8
